libpydhcpserver (1.3.0~beta) unstable; urgency=low

  * Huge rewrite to the networking logic, allowing for layer 2 packets and
    moving all server-related logic into libpydhcpserver

  * Renamed modules and made what should be the last significant API change.

 -- Neil Tallim <flan@uguu.ca>  Fri, 13 Sep 2013 07:00:00 -0600

libpydhcpserver (1.2.0) unstable; urgency=low

  * Massive refactoring and cleanup of all modules

 -- Neil Tallim <flan@uguu.ca>  Fri, 21 Jun 2013 07:00:00 -0600

libpydhcpserver (1.1.0) unstable; urgency=low

  * Massive internal refactoring, rewriting hwaddr and ipv4 as MAC and IPv4,
    intelligent classes that offer a lot of flexibility

 -- Neil Tallim <flan@uguu.ca>  Fri, 24 May 2013 07:00:00 -0600

libpydhcpserver (1.0.0) stable; urgency=low

  * Refactored pydhcplib from staticDHCPd into libpydhcpserver
  
 -- Neil Tallim <flan@uguu.ca>  Sat, 20 Nov 2010 00:00:00 -0600